--- a/premiere/css/estilo.css
+++ b/premiere/css/estilo.css
@@ -1,11 +1,8 @@
-
 #banner{
   position:absolute;
   align:center;
   height:auto;
 }
-
-
 
 
 #wrapper {
@@ -105,6 +102,44 @@
   background: rgba(161,58,156,0.4);
 }
 
+.card-container {
+  perspective: 700px;
+}
+
+.card-flip, .card-container {
+  transform-style: preserve-3d;
+  transition: all 0.7s ease;
+}
+
+.card-flip div {
+  backface-visibility: hidden;
+  transform-style: preserve-3d;
+}
+
+.back {
+  transform: rotateY(-180deg);
+}
+
+.card-container:hover .card-flip {
+  transform: rotateY(180deg);
+}
+
+.card-flip {
+  display: grid;
+  grid-template: 1fr / 1fr;
+  grid-template-areas: "frontAndBack";
+  transform-style: preserve-3d;
+  transition: all 0.7s ease;
+}
+
+.front {
+  grid-area: frontAndBack;
+}
+
+.back {
+  grid-area: frontAndBack;
+  transform: rotateY(-180deg);
+}
 
 
 @media(min-width:768px) {
